hphp/test/zend/good/Zend/tests/argument_restriction_005.php.expectf

Fatal error: Class Sub contains abstract method (offsetExists) and must therefore be declared abstract or implement the remaining methods in %s/argument_restriction_005.php on line 2
